--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         e il metodo POST è utilizzato per mandare dati sensibili
         GET invece è tracciabile -->
         <label for="nome">Username</label>
-        <input type="text" name="nome" placeholder=" Inserisci username" id="nome">
+        <input type="text" name="nome" id="nome">
         <label for="cognome">Password</label>
-        <input type="password" name="pw" placeholder=" Inserisci password" id="pw">
+        <input type="password" name="pw" id="pw">
         <input type="submit" name="Invia" value="Invia dati">
       </form>
     </div>
